# wxRenderer

./: CMakeLists.txt  README.md
geometry/: Geometry.hpp  Line3D.cpp  Line3D.hpp  LineSegment3D.cpp  LineSegment3D.hpp  Plane.cpp  Plane.hpp  Point3D.cpp  Point3D.h  Square3D.cpp  Square3D.hpp  Vector3D.hpp
gui/: MyApp.cpp  MyCanvas.cpp  MyCanvas.hpp  MyFrame.cpp  MyFrame.hpp
renderer/: MyRenderer.cpp  MyRenderer.hpp  Screen.cpp  Screen.hpp
utility/: Utility.cpp  Utility.hpp
